--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -838,6 +838,9 @@ header.topbar .topbar__inner{
 .page{
   padding-top: 12px !important; /* مسافة طبيعية فقط */
 }
+.m-top-tabs{
+  margin-top: 8px !important;
+}
 
 
 
