--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,6 +54,8 @@
 
   <!-- External CSS -->
   <link href="/static/style.css?v=9" rel="stylesheet">
+  <link rel="stylesheet" href="/static/app-safearea.css">
+
 
 <!-- Primary Logo for Google -->
 <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
