--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -102,11 +102,22 @@ if ("serviceWorker" in navigator) {
 
     /* Topbar */
     .topbar, .topbar__inner{ background:transparent !important; border:0 !important; box-shadow:none !important; }
-     header.topbar {
-  position: sticky;
-  top: env(safe-area-inset-top);
+     /* ===== iOS ORDER FIX ===== */
+header.topbar {
+  position: relative;
   padding-top: env(safe-area-inset-top);
 }
+
+header.topbar .searchbar {
+  order: 1;
+  width: 100%;
+}
+
+.m-top-tabs {
+  order: 2;
+  margin-top: 6px;
+}
+
 
 
     .searchbar-wrap{
@@ -930,9 +941,9 @@ window.onpageshow = function(e){
   <div id="page-wrapper">
 {% if not immersive and not no_ui %}
   <!-- ===== Topbar ===== -->
-  <header class="topbar">
+ <header class="topbar">
+  <div class="topbar__inner d-flex flex-column">
 
-    <div class="topbar__inner d-flex align-items-center gap-2">
 
 
 
